service-a-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  ports:
    - port: 8091
  selector:
    name: service-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: service-a
  template:
    metadata:
      labels:
        name: service-a
    spec:
      containers:
        - name: service-a
          image: kyg/service-a-docker
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 8091
